🚀 Update extension name to avoid marketplace conflict
- Changed displayName to 'DAV - Bilingual Programming Language'
- Enhanced description with emojis and unique value proposition
- Ready for VS Code Marketplace publication

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dav-language-support",
-  "displayName": "DAV Language Support",
-  "description": "Support complet pour le langage de programmation DAV - Code en français et anglais avec syntaxe naturelle",
+  "displayName": "DAV - Bilingual Programming Language",
+  "description": "🇫🇷🇬🇧 First bilingual programming language - Write code in French or English with natural syntax. Revolutionary DAV language with syntax highlighting, themes, and snippets.",
   "version": "1.0.0",
   "publisher": "Asabi89",
   "icon": "images/dav-extension-icon.png",
